--- a/django_project/templates/treasure/contribution.html
+++ b/django_project/templates/treasure/contribution.html
@@ -29,7 +29,7 @@
                 <tbody>
                     {% for entry in uploaded %}
                         <tr>
-                            <td> -  <a href="/resource/{{ entry.id }}">{{ entry.name }}</a></td>
+                            <td> -  <a href="{% url 'resource_view' entry.id %}">{{ entry.name }}</a></td>
 <!--                            <td>{% if entry.used %} Yes{% else %} No. (<a href="/resource/{{entry.resource.id }}/use/hist"> Yes?</a>){% endif %}</td>
                             <td>{% if entry.rated %} Yes{% else %} No. (<a href="/resource/{{entry.resource.id }}/rate/"> Rate it</a>){% endif %}</td> -->
                         </tr>
@@ -62,7 +62,7 @@
                 <tbody>
                     {% for entry in used %}
                         <tr>
-                            <td> -  <a href="/resource/{{entry.resource.id }}">{{entry.resource.name}}</a></td>
+                            <td> -  <a href="{% url 'resource_view' entry.resource.id %}">{{entry.resource.name}}</a></td>
                             <td>{{entry.datetime}}</td>
 <!--                            <td>{% if entry.used %} Yes{% else %} No. (<a href="/resource/{{entry.resource.id }}/use/hist"> Yes?</a>){% endif %}</td>
                             <td>{% if entry.rated %} Yes{% else %} No. (<a href="/resource/{{entry.resource.id }}/rate/"> Rate it</a>){% endif %}</td> -->
@@ -96,7 +96,7 @@
                 <tbody>
                     {% for entry in rated %}
                         <tr>
-                            <td> -  <a href="/resource/{{ entry.resource.id }}">{{ entry.resource.name }}</a></td>
+                            <td> -  <a href="{% url 'resource_view' entry.resource.id %}">{{ entry.resource.name }}</a></td>
                             <td>{{entry.datetime}}</td>
 <!--                            <td>{% if entry.used %} Yes{% else %} No. (<a href="/resource/{{entry.resource.id }}/use/hist"> Yes?</a>){% endif %}</td>
                             <td>{% if entry.rated %} Yes{% else %} No. (<a href="/resource/{{entry.resource.id }}/rate/"> Rate it</a>){% endif %}</td> -->
@@ -129,7 +129,7 @@
                 <tbody>
                     {% for entry in downloaded %}
                         <tr>
-                            <td> -  <a href="/resource/{{entry.resource.id }}">{{entry.resource.name}}</a></td>
+                            <td> -  <a href="{% url 'resource_view' entry.resource.id %}">{{entry.resource.name}}</a></td>
                             <td>{{entry.datetime}}</td>
 <!--                            <td>{% if entry.used %} Yes{% else %} No. (<a href="/resource/{{entry.resource.id }}/use/hist"> Yes?</a>){% endif %}</td>
                             <td>{% if entry.rated %} Yes{% else %} No. (<a href="/resource/{{entry.resource.id }}/rate/"> Rate it</a>){% endif %}</td> -->
